src/objects/CFM_Survey_Batch_CSV_Columns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting manages columns and mappings for the CFM Survey Batch Project CSV generation</description>
    <fields>
        <fullName>Column_Field__c</fullName>
        <description>API Name of the field (can include __r relationships) to use to get the data for this column, referenced from CFM_Survey_Batch_Project__c</description>
        <label>Column Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Label__c</fullName>
        <label>Column Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>Index of column in CSV - the lowest index is the leftmost column</description>
        <label>Index</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Custom_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this column required special apex code to generate the value</description>
        <label>Is Custom Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Email_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this column is the Email column, which is required</description>
        <label>Is Email Column</label>
        <type>Checkbox</type>
    </fields>
    <label>CFM Survey Batch Project CSV Columns</label>
</CustomObject>